short description of what you changed

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -28,7 +28,7 @@ También puedes enviar resultados de pruebas para mantener tu propio historial y
     <string name="about_link_github_title">Repositorio de GitHub</string>
     <string name="about_link_github_subtitle">Código fuente &amp; incidencias</string>
     <string name="about_link_github_url">https://github.com/sashkinbro/GamesLibrary-Android</string>
-    <string name="about_footer">Desarrollado por Sashkin Apps © 2025-2026</string>
+    <string name="about_footer">Desarrollado por Sashkin Apps © 2025–2026</string>
     <string name="about_rules_button_title">Reglas</string>
     <string name="about_rules_button_subtitle">Volver a abrir las reglas de la comunidad</string>
     <string name="rules_title">Reglas de la comunidad</string>
@@ -46,9 +46,9 @@ También puedes enviar resultados de pruebas para mantener tu propio historial y
     <string name="title_ps_games_library">Juegos</string>
     <string name="subtitle_games_count">%1$d juegos</string>
     <string name="subtitle_error">Error</string>
-    <string name="subtitle_loading">Cargando...</string>
+    <string name="subtitle_loading">Cargando…</string>
     <string name="subtitle_select_csv">Listo</string>
-    <string name="search_hint">Buscar juego...</string>
+    <string name="search_hint">Buscar juego…</string>
     <string name="cd_open_search">Abrir búsqueda</string>
     <string name="cd_close_search">Cerrar búsqueda</string>
     <string name="cd_open_sort">Abrir menú de ordenación</string>
